# trimmeroni

./: .gitignore  Cargo.toml  LICENSE  README.md  cross.sh  rustfmt.toml
src/: clip.rs  main.rs  util.rs
