[package]
name = "trimmeroni"
version = "0.1.0"
authors = ["outfrost <kotlet.bahn@gmail.com>"]
edition = "2021"
description = "Cut and concatenate video clips without reencoding"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
regex = "1.6.0"
tempfile = "3.3.0"
